--- a/Admin_UI/package.json
+++ b/Admin_UI/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.4",
     "@tailwindcss/vite": "^4.1.14",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "quill": "^2.0.3",
